--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,12 +6,11 @@
 #    datasource:
 #        platform: postgres
 #        url: jdbc:postgresql://localhost:5432/postgres
-#        username: juca
-#        password: des07_18   
+#        username: postgres
+#        password: toor   
 #        driverClassName: org.postgresql.Driver
 #server:
 #    port: 9090
-
 #spring:
 #  datasource:
 #    driver-class-name: com.mysql.cj.jdbc.Drive 
@@ -23,23 +22,3 @@
 #    generate-ddl: true
 #    show-sql: true
 #server:#  port: 9090
-
-#spring:
-#  jpa:
-#    database-platform: org.hibernate.dialect.Oracle10gDialect
-#    open-in-view: true
-#    hibernate:
-#      ddl-auto: none
-##      ddl-auto: create-drop
-##      ddl-auto: validate
-#
-#  datasource:
-#    url: jdbc:oracle:thin:@localhost:1521:XE
-#    username: test_user
-#    password: test_user
-#    driver-class-name: oracle.jdbc.OracleDriver
-#
-#logging:
-#  level:
-#    org.hibernate.SQL: DEBUG
-#    org.hibernate.type.descriptor.sql.BasicBinder: TRACE
